feat: Connected MongoDB, added basic CRUD operations and modfied oas-doc
